# cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance

./: .cruft.json  .gitattributes  .gitignore  .log4brains.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING_GUIDE.rst  Dockerfile  Makefile  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: CODE_OF_CONDUCT.rst  CONTRIBUTING_GUIDE.rst
.github/workflows/: auto-merge-dependabot.yml  ci.yml  codeql.yml  constraints.txt  docs.yml  labeler.yml  publish_benchmarks.yml  publish_log4brains.yml  release.yml
.makefile/: docker.mk  docs.mk  project_orchestration.mk  test.mk
37/bench/: data.js
38/bench/: data.js
39/bench/: data.js
adl/: 404.html  index.html
adl/404/: index.html
adl/_next/data/44etK30pMaYy6k7HjOe6b/: index.json
adl/_next/data/6vOZwMrwbltxIfLccn0GW/: index.json
adl/_next/data/CLUg-dTfNX94IfItWFDTj/: index.json
adl/_next/data/KRQJNkxtHGMO4qNwN7o3V/: index.json
adl/_next/data/UHj9rueINSfeChtpDkCDu/: index.json
adl/_next/data/VcRJkuL614QS7oRD4zz4E/: index.json
adl/_next/data/g5UU39q2sALbzwvK_lsXk/: index.json
adl/_next/data/p8fwGLKiuDQ51_X5GA0q_/: index.json
adl/_next/data/xmaaX_dNIsf-fq9PaHeqv/: index.json
adl/_next/static/--69WHQtr-Ie58nuI6VaU/: _buildManifest.js
adl/_next/static/-1Re4XMJlYHk2af9SXe2X/: _buildManifest.js
adl/_next/static/-3jClJrnlP2BKpVZyHNEQ/: _buildManifest.js
adl/_next/static/-4bkIUXC6CPIgdPPR74xQ/: _buildManifest.js
adl/_next/static/-7dFT9E-V8ap-7--1kjIt/: _buildManifest.js
adl/_next/static/-8JnFluRJBI9ItWZDnf6J/: _buildManifest.js
adl/_next/static/-Ahcx8SlzaMeGEzqjoghv/: _buildManifest.js
adl/_next/static/-GWefqENjrD1YPHI037nf/: _buildManifest.js
adl/_next/static/-I-ytcCkG0e6kgULk88ce/: _buildManifest.js
adl/_next/static/-LmHpvN1WJqYeN5b0AGgy/: _buildManifest.js
adl/_next/static/-P6fmstaCnph-2CVkrPu1/: _buildManifest.js
adl/_next/static/-X2S4E0nAYRS8aGrpYx6P/: _buildManifest.js
adl/_next/static/-XfGAayB3_LtUyXiE7MvQ/: _buildManifest.js
adl/_next/static/-XfbMp0oyqGQHMSLdTjY8/: _buildManifest.js
adl/_next/static/-cXph2XteG1kMCTPAmf4l/: _buildManifest.js
adl/_next/static/-eh8Nkk9iMVpO5cLFK3Ji/: _buildManifest.js
adl/_next/static/-gK1a8yD_Ea7u7tJOBnYa/: _buildManifest.js
adl/_next/static/-lvElvWS7dpBmE1wxX1ME/: _buildManifest.js
adl/_next/static/-mwdcaUUm2NT8Kkw0lsgA/: _buildManifest.js
adl/_next/static/-oCn5C-y-4XATxFFL6m9d/: _buildManifest.js
adl/_next/static/-vU8N41IkWXMU0ExwTENw/: _buildManifest.js
adl/_next/static/-z0GAV4KVsvFHvBxUKIGG/: _buildManifest.js
adl/_next/static/00rUgM_R8XSrSY3r-yoSh/: _buildManifest.js
adl/_next/static/02CP_p4js6vF1EDH09KFh/: _buildManifest.js
adl/_next/static/02wPfvCbI0NiTlGuUV0Ua/: _buildManifest.js
adl/_next/static/03LLd3tuA_w7KXWYKvWEh/: _buildManifest.js
adl/_next/static/07fFZtkKAQHE40sG-CP1j/: _buildManifest.js
adl/_next/static/09kBkwugCeYyfs-lwhtia/: _buildManifest.js
adl/_next/static/0Cvw2Vlzx1GlaWZ3Brc9u/: _buildManifest.js
adl/_next/static/0EzAHaTfZSkMnFhjidTEb/: _buildManifest.js
adl/_next/static/0GOKyMatRVmCDIm3MtDgU/: _buildManifest.js
adl/_next/static/0JmnSKfrC4kLyosSPQ-Sx/: _buildManifest.js
adl/_next/static/0LnyB1c2n7OmWmtOnsqFK/: _buildManifest.js
adl/_next/static/0LtTBFKEpgWaOYAg5RKBU/: _buildManifest.js
adl/_next/static/0N4Ln7FdYIbKMmql2plvC/: _buildManifest.js
adl/_next/static/0PmDgm50w9hCeYnK-WDUO/: _buildManifest.js
adl/_next/static/0PyEXNl-R1-GCFWWJl5jc/: _buildManifest.js
adl/_next/static/0Q6y4KHiUmPlfOH9e28us/: _buildManifest.js
adl/_next/static/0RliBm6tUzvHnTn_k2IaS/: _buildManifest.js
adl/_next/static/0Rz26ZN-9cxswaslBZRpY/: _buildManifest.js
adl/_next/static/0Tk5JOJqq1gmhlNiZFA1V/: _buildManifest.js
adl/_next/static/0WUP4IwEgCSQXvASvU5N0/: _buildManifest.js
adl/_next/static/0WZUpGINKIYB8QJIjH8pa/: _buildManifest.js
adl/_next/static/0YnEllIEcEacAIaPvgQFT/: _buildManifest.js
adl/_next/static/0Yzpv5fRXAlvDVd3etFJC/: _buildManifest.js
adl/_next/static/0aOlKh2HA4X0lUXLA3lK8/: _buildManifest.js
adl/_next/static/0cp3PxOXtItaz9EreqkZW/: _buildManifest.js
adl/_next/static/0css2mmpSkpJyley8HxFv/: _buildManifest.js
adl/_next/static/0d0qWvyZ1lbreZKPSJoJf/: _buildManifest.js
adl/_next/static/0envdYh2nlbL7fbAr6-wF/: _buildManifest.js
adl/_next/static/0fftllw2UfX7INGL2_h1j/: _buildManifest.js
adl/_next/static/0g3nKX3JHirTv6Oopxhp4/: _buildManifest.js
adl/_next/static/0iNe4MysqCgkgi0gpx_Pt/: _buildManifest.js
adl/_next/static/0immovXNppxhSxLIEXmnD/: _buildManifest.js
adl/_next/static/0jFTo2CRqDdcDp0P68c4Z/: _buildManifest.js
adl/_next/static/0km9FYObri7ZQcOXfdkPN/: _buildManifest.js
adl/_next/static/0qKS02Gpd7BiarKUkcjof/: _buildManifest.js
adl/_next/static/0qrcMsb-VzpRPye1uLk71/: _buildManifest.js
adl/_next/static/0rA-TQkE69NaUJPAaENrf/: _buildManifest.js
adl/_next/static/0uAfX_l1YxaRd8ZEwKaud/: _buildManifest.js
adl/adr/: 20210124-use-log4brains-to-manage-the-adrs.html  20210124-use-markdown-architectural-decision-records.html
adl/adr/20210124-use-log4brains-to-manage-the-adrs/: index.html
adl/adr/20210124-use-markdown-architectural-decision-records/: index.html
adl/data/VcRJkuL614QS7oRD4zz4E/: adrs.json
adl/data/WpU7tGEY_KunTsKDN85tR/: adrs.json
adr/: 404.html  index.html
adr/adr/: 20210124-use-log4brains-to-manage-the-adrs.html  20210124-use-markdown-architectural-decision-records.html
adr/data/bYXnI-XHeiCzQChJ9x_NV/: adrs.json
adr/data/nlAW13jv5IGNGNLMYc-Ty/: adrs.json
cookiecutter_cruft_poetry_tox_pre_commit_ci_cd_instance/: __init__.py  __main__.py  main.py
dev/bench/: data.js
dev/py37-benchmark/: data.js
dev/py38-benchmark/: data.js
dev/py39-benchmark/: data.js
dev/pypy37-benchmark/: data.js
dev/pypy38-benchmark/: data.js
dev/pypy39-benchmark/: data.js
docs/: Makefile  requirements.txt
docs/source/: adr.md  changelog.rst  conf.py  index.md  usage.md  usage.rst
docs/source/adr/: README.md  index.md
docs/source/akm/: README.md  index.md
hooks/: post_gen_project.py
tests/: __init__.py  conftest.py  test_main.py  utils.py
(+1998 files in other folders)
