[tool.poetry]
name = "cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance"
version = "0.0.0"
description = "Cookiecutter Cruft Poetry Tox Pre Commit Ci Cd Instance"
authors = ["YOUR_FIRST_AND_LAST_NAME <action@github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TeoZosa/cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance"
homepage = "https://github.com/TeoZosa/cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance"
include = ["cookiecutter_cruft_poetry_tox_pre_commit_ci_cd_instance/py.typed"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.urls]
Changelog = "https://github.com/TeoZosa/cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance/releases"

[tool.poetry.dependencies]
python = "^3.8,<3.11"

# Monitoring and Observability
sentry-sdk = "^1.5.6"
structlog-sentry-logger = "^0.17.3"
# Jupyter Notebook
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
# Type Checking and Data Validation
icontract = "^2.6.1" # Design-by-contract support
typeguard = "^2.13.3" # Runtime type checker; Note: Mypyc-compiled C-extensions also perform runtime type checking.

# Documentation
# Specifying documentation dependencies as optional dependencies
# as a hack until Poetry version >= 1.2 when dependency groups are supported
# see: python-poetry/poetry#1644
emoji = { version = "^1.6.3", optional = true}
myst-parser = { version = "^0.17.0", optional = true}
pygments = { version = "^2.11.2", optional = true}
sphinx = { version = "^4.4.0", optional = true}
sphinx-autoapi = { version = "^1.8.4", optional = true}
sphinx-rtd-theme = { version = "^1.0.0", optional = true}
sphinxcontrib-confluencebuilder = { version = "^1.7.1", optional = true}
types-emoji = { version = "^1.2.7", optional = true} # PEP 561 compliant stub package for mypy

# Project-Specific
python-dotenv = "^0.19.2"
importlib-metadata = "^4.11.1"
rich = "^11.2.0"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
# Standardized Developer Workflow Orchestration
cruft = "^2.6.0" # Automated Cookiecutter template synchronization

# Type Checking and Data Validation
mypy = "^0.931" # Static type checker (includes Mypyc Python module to C-Extension compiler, enabled by standard Python type annotations)

# Testing
nbqa = "^1.2.3"
pytest = "^7.0.1"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pytest-cov = "^3.0.0"
pytest-emoji = "^0.2.0"
pytest-mock = "^3.8.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.5.0"
hypothesis = "^6.38.0"
icontract-hypothesis = "^1.1.7"
mutmut = "^2.4.0"
xdoctest = {extras = ["all"], version = "^0.15.10"}
tox = "^3.24.5"
tox-wheel = "^0.7.0"

# Linting
## Code formatting
black = "^22.3.0" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Code quality
pylint = "^2.12.2"
## Automation and management
pre-commit = "^2.17.0"

# CI/CD
tox-gh-actions = "^2.9.1"

# Documentation
darglint = "^1.8.1"
nodeenv = "^1.6.0" # ADR documentation Node dependency

# Specifying documentation dependencies as optional dependencies
# as a hack until Poetry version >= 1.2 when dependency groups are supported
# see: python-poetry/poetry#1644
[tool.poetry.extras]
docs = [
    "emoji", # Render emoji shortcodes
    "myst-parser",
    "pygments",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    "sphinxcontrib-confluencebuilder",
    "types-emoji",
]
[tool.poetry.scripts]
"cookiecutter-cruft-poetry-tox-pre-commit-ci-cd-instance" = "cookiecutter_cruft_poetry_tox_pre_commit_ci_cd_instance.main:app"

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["cookiecutter_cruft_poetry_tox_pre_commit_ci_cd_instance"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = true

[tool.cruft]
skip = [
    ".env",
    ".python-version",
    "cookiecutter_cruft_poetry_tox_pre_commit_ci_cd_instance/__init__.py",
    "docs/source/.env",
]

[tool.flakeheaven]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakeheaven.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503",  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8
    # Ignore errors resulting from Jupyter notebook to Python module portability formatting
    "-E265", # block comment should start with '# '
    # Ignore errors resulting from Jupyter notebook-style programming
    "-E402", # module level import not at top of file
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 0 # adjust `fail-under` value as quality standards permit
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.mypy]
disallow_untyped_defs = true
files = "**/*.py"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "bad-continuation",
  "c-extension-no-member",
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = true
markers = [
    "pure_python_only: mocker-based tests which are not compatible with compiled C extensions",
]
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0", "mypy", "setuptools"]
build-backend = "poetry.core.masonry.api"
